# stuff-control

./: .env.template  .gitignore  Makefile  README.md  deployment.sh  docker-compose.yml  pyproject.toml  supervisord.conf
application/: asgi.py  settings.py  urls.py  wsgi.py
application/authentication/: managers.py  models.py  urls.py  views.py
application/authentication/migrations/: 0001_initial.py  0002_user_updated_at.py
application/authentication/tests/: test_auth_token.py
application/common/: apps.py  models.py
application/common/services/: brasilapi.py
application/common/tests/: test_mixins.py
application/finance/: admin.py  apps.py  coupons.py  enum.py  expenses.py  models.py  serializers.py  urls.py  views.py
application/finance/migrations/: 0001_initial.py  0002_rename_value_expense_amount_and_more.py  0003_coupon.py  0004_expense_coupon.py  0005_coupon_amount.py  0006_coupon_updated_at_expense_updated_at.py
application/finance/tests/: stubs.py  test_coupons.py  test_expense.py  test_expense_views.py
application/templates/: base.html  expense-list.html  index.html
frontend/: package.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Header.js
frontend/src/components-old/: Modal.js
frontend/src/containers/: Layout.js  Protected.js
frontend/src/context/: ThemeContext.js
frontend/src/interceptors/: axios.js
frontend/src/pages/: ExpenseAdd.js  Expenses.js  ExpensesPage.js  HomePage.js  Login.js  LoginPage.js  LogoutPage.js
frontend/src/pages-old/: LoginPage.js
infra/: build.sh  restart.sh  stop.sh
(+5 files in other folders)
