[tool.poetry]
name = "django-advanced"
version = "0.1.0"
description = ""
authors = ["Everton Castro <evertoncastro.sp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0rc1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.0"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
